--- a/index.html
+++ b/index.html
@@ -11,48 +11,72 @@
 
 	
 	<!--Tells a mobile device how to render -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
  
 	
 	<!--Tells who wrote the HTML -->
+	<meta name="author" content="Sebastian Meza-Torres">
 
 	
 	<!-- Accurate description about the content 140-160 characters to display on search engines -->
-
+    <meta name="description" content="This activity focuses on adding accessibility using HTML5 SEO techniques and meta tags.">
 	
 	<!-- Summarize the main topic, avoid "keyword stuffing" -->
+	 <meta name="keywords" content="BeeGees, discography, albums, cover images, release year.">
 
 	
 	<!--Help web crawlers index and display your page -->
+	<meta name="robots" content="index, follow">
 
 <!-- OPEN GRAPH/SOCIAL MEDIA META TAGS -->
 	<!-- For Twitter -->
+	 <meta name="twitter: card" content="summary_large_image">
+	 <meta name="twitter: site" content="">
+	 <meta name="twitter: title" content="">
+	 <meta name="twitter: description" content="">
+	 <meta name="twitter: image" content="">
+	 <meta name="twitter: creator" content="">
 
-	<!-- Open Graph -->	
+	<!-- Open Graph -->
+	 <meta property="og:title" content="Bee Gees Discography">
+	 <meta property="og:type" content="website">
+	 <meta property="og:url" content="">
+	 <meta property="og:image" content="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/SPICKS-AND-SPECKS.jpeg">
 
 <!-- LINKS -->
 	<!-- To stylesheets and scripts, custom styles should always be last in order -->
+	 <link href="style.css" rel="stylesheet">
+	 <script src="scripts.js"></script>
 
 	
 	<!-- Firefox, Chrome, Safari, IE 11+, Edge, and Opera. 196x196 pixels in size. --> 
+    <link rel="icon" type="image/png" size="196x196" href="/path/to/favicon-196x196.png">
 
 	
 	<!--tells the search engine this is the permalink -->
+	<link rel="canonical" href="http://example.com/BeeGees/">
 
 	
 	<!--Tells the browser to display this rather than the current page URL -->
 
 	
 	<!-- Tells the browser and search engine there are multiple languages of this page available-->
+	 <link rel="alternate" hreflang="en" href="http://example.com/BeeGees/">
+	 <link rel="alternate" hreflang="es" href="http://example.com/BeeGees/">
+	 <link rel="alternate" hreflang="fr" href="http://example.com/BeeGees/">
 
 
 	<!-- Gives credit to the author -->
+	 <link rel="author" href="https:////github.com/smezator">
 
 	
 	<!-- license or authorizations for the page-->
+	 <link rel="license" href="https://creativecommons.org/licenses/by/4.0/">
 
 
 <!-- TITLE -->	
 	<!--title of the page content displayed on search engines-->
+	<title>Bee Gees DISCOgraphy</title>
 
 </head>
 	
@@ -77,7 +101,7 @@
 	</header>
 	<main id="main">
 		<section>
-			Spicks and Specks
+			<h2>Spicks and Specks</h2>
 			<!-- all image links in this document are set as absolute links only so that you didn't need to download them all as part of the activity. DO NOT CODE YOUR IMAGES ON ASSIGNMENTS AS ABSOLUTE LINKS. Organize your project folder properly and use relative links for images -->
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/SPICKS-AND-SPECKS.jpeg" alt="Spicks and specks, the Bee Gees, abstract pop art in black, white, yellow, red and pink">
 			<dl>
@@ -88,7 +112,7 @@
 			</dl>
 		</section>
 		<section>
-			BeeGees 1st
+			<h2>BeeGees 1st</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/BEE-GEES-1ST.jpeg" alt="Bee Gees 1st, Barry, Robin, and Maurice Gibb walking through a psychedelic garden forest">
 			<dl>
 				<dt>Year</dt>
