--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 			</dl>
 		</section>
 		<section>
-			Horizontal
+			<h2>Horizontal</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/HORIZONTAL.jpeg" alt="Bee Gees horizontal, Barry, Robin, and Maurice Gibb reflected in a hallway mirror in sepia tone">
 			<dl>
 				<dt>Year</dt>
@@ -132,7 +132,7 @@
 			</dl>
 		</section>
 		<section>
-			Idea
+			<h2>Idea</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/IDEA.jpeg" alt="Bee Gees idea BeeGees, illustration of maurice gibb with half face in line art and the other half with a monocle, purple tint">
 			<dl>
 				<dt>Year</dt>
@@ -142,7 +142,7 @@
 			</dl>
 		</section>
 		<section>
-			Odessa
+			<h2>Odessa</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/ODESSA.jpeg" alt="Bee Gees odessa written in yellow on a red background">
 			<dl>
 				<dt>Year</dt>
@@ -152,7 +152,7 @@
 			</dl>
 		</section>
 		<section>
-			Best of Bee Gees
+			<h2>Best of Bee Gees</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/BEST-OF-BEE-GEES.jpeg" alt="best of Bee Gees, Holiday, I've Gotta Get a Message to You, I Can't See Nobody, Words, I Started a Joke, Spicks and Specks, First of May, World, Massachusetts, To Love Somebody, Every Christian Lion Hearted Man Will Show You, New York Mining Disaster 1941, Barry, Robin, and Maurice Gibb sketched in black on yellow background">
 			<dl>
 				<dt>Year</dt>
@@ -162,7 +162,7 @@
 			</dl>
 		</section>
 		<section>
-			Cucumber Castle
+			<h2>Cucumber Castle</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/CUCUMBER-CASTLE.jpeg" alt="Bee Gees, cucumber castle, barry and robin gibb wearing suits of armor">
 			<dl>
 				<dt>Year</dt>
@@ -172,7 +172,7 @@
 			</dl>
 		</section>
 		<section>
-			2 Years On
+			<h2>2 Years On</h2>
 			<img src="images/2_YEARS_ON.jpeg" alt="Bee Gees 2 years on in blue on white background, old time-y photo pd the gibb brothers">
 			<dl>
 				<dt>Year</dt>
@@ -182,7 +182,7 @@
 			</dl>
 		</section>
 		<section>
-			Trafalgar
+			<h2>Trafalgar</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/TRAFALGAR.jpeg" alt="Bee Gee, trafalgar, illustration, rolled parchment paper banner, 18th century ships in the sea">
 			<dl>
 				<dt>Year</dt>
@@ -192,7 +192,7 @@
 			</dl>
 		</section>
 		<section>
-			To Whom It May Concern
+			<h2>To Whom It May Concern</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/TO-WHOM-IT-MAY-CONCERN.jpeg" alt="Bee Gees, to whom it may concern, the brothers gibb on stage">
 			<dl>
 				<dt>Year</dt>
@@ -202,7 +202,7 @@
 			</dl>
 		</section>
 		<section>
-			Life In A Tin Can
+			<h2>Life In A Tin Can</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/LIFE-IN-A-TIN-CAN.jpeg" alt="the Bee Gees, life in a tine can, photo perspective is from above a soda pop can and the brothers gibb can been seen through the pop top in the can">
 			<dl>
 				<dt>Year</dt>
@@ -212,7 +212,7 @@
 			</dl>
 		</section>
 		<section>
-			Best of Bee Gees Volume 2
+			<h2>Best of Bee Gees Volume 2</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/BEST-OF-BEE-GEES-VOLUME.jpeg" alt="best of Bee Gees volume 2, the brothers gibb sitting on a black, white , and red abstract blanket in a tropical setting">
 			<dl>
 				<dt>Year</dt>
@@ -222,7 +222,7 @@
 			</dl>
 		</section>
 		<section>
-			Mr Natural
+			<h2>Mr Natural</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/MR-NATURAL.jpeg" alt="Bee Gees, mr natural, ll in neon sign, darkly lit bar with an old smiling person in focus">
 			<dl>
 				<dt>Year</dt>
@@ -232,7 +232,7 @@
 			</dl>
 		</section>
 		<section>
-			Main Course
+			<h2>Main Course</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/MAIN-COURSE.jpeg" alt="main course, Bee Gees, art deco illustration with green background adn a naked lady in a yellow hat">
 			<dl>
 				<dt>Year</dt>
@@ -242,7 +242,7 @@
 			</dl>
 		</section>
 		<section>
-			Children of the World
+			<h2>Children of the World</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/CHILDREN_OF_THE_WORLD.jpeg" alt="Bee Gees, children of the work, painting the the gibb brother wearing aviation flight jacket and white scarves">
 			<dl>
 				<dt>Year</dt>
@@ -252,7 +252,7 @@
 			</dl>
 		</section>
 		<section>
-			Here At Last
+			<h2>Here At Last</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/HERE-AT-LAST.jpeg" alt="here at last, Bee Gees, ...live, the brothers gibb sharing a microphone on stage">
 			<dl>
 				<dt>Year</dt>
@@ -262,7 +262,7 @@
 			</dl>
 		</section>
 		<section>
-			Saturday Night Fever
+			<h2>Saturday Night Fever</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/SATURDAY-NIGHT-FEVER.jpeg" alt="the original movie sound track, saturday night fever, iconic john travolta disco pose wearing a white suit with a black shirt, standing on a multicolor lit dance floor, photo of the gibb brothers wearing white suits in the background">
 			<dl>
 				<dt>Year</dt>
@@ -272,7 +272,7 @@
 			</dl>
 		</section>
 		<section>
-			Spirits Having Flown
+			<h2>Spirits Having Flown</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/SPIRITS_HAVING_FLOWN.jpeg" alt="Bee Gees spirits having fun, brothers gibb with hair flowing and a red gradient bubble">
 			<dl>
 				<dt>Year</dt>
@@ -282,7 +282,7 @@
 			</dl>
 		</section>
 		<section>
-			Bee Gees Greatest
+			<h2>Bee Gees Greatest</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/BEE-GEES-GREATEST.jpeg" alt="Bee Gees greatest, purple bubble and golden dove">
 			<dl>
 				<dt>Year</dt>
@@ -292,7 +292,7 @@
 			</dl>
 		</section>
 		<section>
-			Living Eyes
+			<h2>Living Eyes</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/LIVING-EYES.jpeg" alt="living eyes, Bee Gees, the gibb brothers wearing formal clothes on a roof top with the new york skyline during sunset in the background">
 			<dl>
 				<dt>Year</dt>
@@ -302,7 +302,7 @@
 			</dl>
 		</section>
 		<section>
-			Staying Alive
+			<h2>Staying Alive</h2>
 			<img src="images/STAYING-ALIVE.jpeg" alt="the original motion picture soundtrack, staying alive, john travolta in stage lights, topless, sweaty, with a sweat headband">
 			<dl>
 				<dt>Year</dt>
@@ -312,7 +312,7 @@
 			</dl>
 		</section>
 		<section>
-			E.S.P
+			<h2>E.S.P</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/ESP.jpeg" alt="E.S.P, Bee Gees, brothers gibb standing in a field at dusk">
 			<dl>
 				<dt>Year</dt>
@@ -322,7 +322,7 @@
 			</dl>
 		</section>
 		<section>
-			One
+			<h2>One</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/ONE.jpeg" alt="Bee Gees, one, brothers gibb faces in black and white">
 			<dl>
 				<dt>Year</dt>
@@ -332,7 +332,7 @@
 			</dl>
 		</section>
 		<section>
-			Tales From The Brothers Gibb
+			<h2>Tales From The Brothers Gibb</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/TALES-FROM-THE-BROTHERS-GIBB.jpeg" alt="Bee Gees, tales from teh brother gibb, a history in song, 1967-1990, parchment paper background, red stamped square, leaf stamp">
 			<dl>
 				<dt>Year</dt>
@@ -342,7 +342,7 @@
 			</dl>
 		</section>
 		<section>
-			High Civilization
+			<h2>High Civilization</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/HIGH-CIVILIZATION.jpeg" alt="Bee Gees high civilization, photo composite with the brother gibb wearing all black, illustration of london in the background and technology item flying around in the sky, floppy disc, cube, power cord, eagle, keyboard, jet">
 			<dl>
 				<dt>Year</dt>
@@ -352,7 +352,7 @@
 			</dl>
 		</section>
 		<section>
-			Size Isnâ€™t Everything
+			<h2>Size Isnâ€™t Everything</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/SIZE_ISNT_EVERYTHING.jpeg" alt="Bee Gees, size isn't everything, fun house mirror effect making the brothers gibb appear taller, miami style hotel and palm tree in teh background">
 			<dl>
 				<dt>Year</dt>
@@ -362,7 +362,7 @@
 			</dl>
 		</section>
 		<section>
-			Still Waters
+			<h2>Still Waters</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/STILL-WATERS.jpeg" alt="still waters, Bee Gees, sepia tone photo with the brothers gibb looking introspective">
 			<dl>
 				<dt>Year</dt>
@@ -372,7 +372,7 @@
 			</dl>
 		</section>
 		<section>
-			One Night Only
+			<h2>One Night Only</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/ONE-NIGHT-ONLY.jpeg" alt="Bee Gees, one night only, black background with the brother gibb wearing all black, outer glow around them">
 			<dl>
 				<dt>Year</dt>
@@ -382,7 +382,7 @@
 			</dl>
 		</section>
 		<section>
-			This Is Where I Came In
+			<h2>This Is Where I Came In</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/THIS-IS-WHERE-I-CAME-FROM.jpeg" alt="Bee Gees, this is where i came in, green floor an wall with a black and white, old photo of the brother gibb in the background, with the brothers standing in front of it, maurice and robin in blurred motion while walking and barry standing with hands in his pockets">
 			<dl>
 				<dt>Year</dt>
@@ -392,7 +392,7 @@
 			</dl>
 		</section>
 		<section>
-			Their Greatest Hits The Record
+			<h2>Their Greatest Hits The Record</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/THEIR-GREATEST-HITS.jpg" alt="">
 			<dl>
 				<dt>Year</dt>
@@ -402,7 +402,7 @@
 			</dl>
 		</section>
 		<section>
-			Number Ones
+			<h2>Number Ones</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/NUMBER-ONES.jpeg" alt="">
 			<dl>
 				<dt>Year</dt>
@@ -412,7 +412,7 @@
 			</dl>
 		</section>
 		<section>
-			Love Songs
+			<h2>Love Songs</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/LOVE-SONGS.jpeg" alt="">
 			<dl>
 				<dt>Year</dt>
@@ -422,7 +422,7 @@
 			</dl>
 		</section>
 		<section>
-			The Ultimate Bee Gees
+			<h2>The Ultimate Bee Gees</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/THE-ULTIMATE-BEE-GEES.jpeg" alt="">
 			<dl>
 				<dt>Year</dt>
@@ -432,7 +432,7 @@
 			</dl>
 		</section>
 		<section>
-			Timeless â€“ The All-Time Greatest Hits
+			<h2>Timeless â€“ The All-Time Greatest Hits</h2>
 			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/TIMELESS.jpeg" alt="">
 			<dl>
 				<dt>Year</dt>
@@ -443,7 +443,7 @@
 		</section>
 	</main>
 	<aside>
-		Recommendations
+		<h3>Recommendations</h3>
 		<p>If you like the Bee Gees, you might also like these bands.</p>
 		<ul>
 			<li><a href="#">KC and the Sunshine Band</a></li>
