--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 		</section>
 		<section>
 			<h2>Their Greatest Hits The Record</h2>
-			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/THEIR-GREATEST-HITS.jpg" alt="">
+			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/THEIR-GREATEST-HITS.jpg" alt="This is an image of the band's greatest hits record.">
 			<dl>
 				<dt>Year</dt>
 				<dd>2001</dd>
@@ -403,7 +403,7 @@
 		</section>
 		<section>
 			<h2>Number Ones</h2>
-			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/NUMBER-ONES.jpeg" alt="">
+			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/NUMBER-ONES.jpeg" alt="This is an image of BeeGees band blending in with the number 1.">
 			<dl>
 				<dt>Year</dt>
 				<dd>2004</dd>
@@ -413,7 +413,7 @@
 		</section>
 		<section>
 			<h2>Love Songs</h2>
-			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/LOVE-SONGS.jpeg" alt="">
+			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/LOVE-SONGS.jpeg" alt="This is an image of a love song cover with surrounding flowers.">
 			<dl>
 				<dt>Year</dt>
 				<dd>2005</dd>
@@ -423,7 +423,7 @@
 		</section>
 		<section>
 			<h2>The Ultimate Bee Gees</h2>
-			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/THE-ULTIMATE-BEE-GEES.jpeg" alt="">
+			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/THE-ULTIMATE-BEE-GEES.jpeg" alt="This is an image of the ultimate bee gees in neon color.">
 			<dl>
 				<dt>Year</dt>
 				<dd>2009</dd>
@@ -433,7 +433,7 @@
 		</section>
 		<section>
 			<h2>Timeless â€“ The All-Time Greatest Hits</h2>
-			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/TIMELESS.jpeg" alt="">
+			<img src="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/TIMELESS.jpeg" alt="This is an image of BeeGees band in fancy clothes.">
 			<dl>
 				<dt>Year</dt>
 				<dd>2017</dd>
