Updated Index File
Edited the file to reduce the errors from the HTML checker.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 	
 	<!-- Firefox, Chrome, Safari, IE 11+, Edge, and Opera. 196x196 pixels in size. --> 
-    <link rel="icon" type="image/png" size="196x196" href="/path/to/favicon-196x196.png">
+    <link rel="icon" type="image/png" href="/path/to/favicon-196x196.png">
 
 	
 	<!--tells the search engine this is the permalink -->
@@ -67,7 +67,7 @@
 
 
 	<!-- Gives credit to the author -->
-	 <link rel="author" href="https:////github.com/smezator">
+	 <link rel="author" href="https://github.com/smezator">
 
 	
 	<!-- license or authorizations for the page-->
