--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
 <!-- OPEN GRAPH/SOCIAL MEDIA META TAGS -->
 	<!-- For Twitter -->
 	 <meta name="twitter: card" content="summary_large_image">
-	 <meta name="twitter: site" content="">
-	 <meta name="twitter: title" content="">
-	 <meta name="twitter: description" content="">
-	 <meta name="twitter: image" content="">
-	 <meta name="twitter: creator" content="">
+	 <meta name="twitter: site" content="@beegees">
+	 <meta name="twitter: title" content="DISCOgraphy">
+	 <meta name="twitter: description" content="The description of this is to show the discography of the Bee Gees band showing off their album from the year 1966 - 2017.">
+	 <meta name="twitter: image" content="https://x.com/beegeesofficial">
+	 <meta name="twitter: creator" content="@beegees">
 
 	<!-- Open Graph -->
 	 <meta property="og:title" content="Bee Gees Discography">
 	 <meta property="og:type" content="website">
-	 <meta property="og:url" content="">
+	 <meta property="og:url" content="http://example.com/BeeGees/">
 	 <meta property="og:image" content="https://www.public.asu.edu/~ccarra1/examples/SEO-meta/images/SPICKS-AND-SPECKS.jpeg">
 
 <!-- LINKS -->
@@ -82,15 +82,16 @@
 	
 <body>
 	<!-- Skip To Content Link (https://css-tricks.com/how-to-create-a-skip-to-content-link/)(example at https://www.starbucks.com/) -->
+	 <a class="skip-to-content-link" href="main">Skip to Content</a>
 
 	
 	<!-- Add headings to give structure, context, relevance to the content-->
 	<!-- Add detailed alt attributes to the last 5 images, the other 29 are done for you as an example-->
 	<header>
-		DISCOgraphy
+		<h1>DISCOgraphy</h1>
 		<p>The Bee Gees were a music group formed in 1958, featuring brothers Barry, Robin, and Maurice Gibb. The trio were especially successful as a popular music act in the late 1960s and early 1970s, and later as prominent performers of the disco music era in the mid- to late 1970s.</p>
 		<nav>
-			Main Navigation
+			<h2>Main Navigation</h2>
 			<ul>
 				<li><a href="#">Discography</a></li>
 				<li><a href="#">News</a></li>
